--- a/config.yml
+++ b/config.yml
@@ -8,29 +8,34 @@ colors:
 # Bot status configuration
 status:
   texts:  # Listă de texte care se schimbă random la 10 secunde
-    - "Ready to help ❤️"
-    - "Serving the pack! 🐺"
-    - "Online and active! 🌟"
-    - "Helping users! 💫"
-    - "Powered by Skypixel™️"
-    - "Join us in the Metaverse! 🌐"
-    - "Exploring new frontiers! 🚀"
-    - "Your guide to the virtual world! 🧭"
-    - "Connecting communities, one byte at a time! 🤝"
-    - "Creating immersive experiences! ✨"
-    - "Where the adventure begins! 🗺️"
-    - "Your home away from home! 🏡"
-    - "Come howl with us! 🐺"
-    - "Experience the future, today! 🔮"
-    - "Building the future, together. 🏗️"
-    - "Your ultimate VR destination. 🎯"
-    - "Unleash your inner wolf! 🐾"
-    - "The pack is waiting for you!"
-    - "Your journey starts here."
+    - "🐺 Guiding {servers} server packs"
+    - "⚙️ Supporting {members} members"
+    - "🌐 Premium dens active: {premiumGuilds}"
+    - "🎉 Greeting {membersGreeted} friends"
+    - "🚀 Online for {uptime}"
+    - "🤝 Backing {servers} communities"
+    - "✨ Powered by THE WOLF DEN"
+    - "💡 Crafted by Skypixel™"
   type: "Custom"  # Tipul activității (Playing, Streaming, Listening, Watching, Competing)
   url: "https://thewolfdenvr.carrd.co/"  # URL pentru Streaming (opțional)
   status: "idle"  # Poate fi "online", "dnd", "idle" sau "invisible"
   interval_ms: 10000  # Interval for rotating presence/status
+
+# Known guilds where the bot is active
+# Set tier: premium to enable features under events/guilds/<slug>
+guilds:
+  - name: 'The Wolf Den'
+    id: '1217588804328620163'
+    slug: 'the-wolf-den'
+    tier: 'premium'
+  - name: "Mastera's Animation Empire"
+    id: '1299378352301539398'  # Set this to the guild ID if available
+    slug: 'masteras-animation-empire'
+    tier: 'premium'
+  - name: "Spencer's Cave"
+    id: '1010638602004340787'  # Set this to the guild ID if available
+    slug: 'spencers-cave'
+    tier: 'premium'
 
 # General limits
 limits:
@@ -1012,7 +1017,11 @@ events:
         - "🚫 Unknown command: /{command}."
 
   messageCreate:
-    guild_id: '1217588804328620163'
+    allowed_guilds:
+      - '1217588804328620163'
+      - 'The Wolf Den'
+      - "Mastera's Animation Empire"
+      - "Spencer's Cave"
     greetings:
       patterns:
         - '^h+e+l+o+$'
