--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puro",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Puro is a versatile and dynamic Discord bot designed to enhance your server experience. With a wide range of commands and seamless integration, Puro helps automate tasks and bring more fun and efficiency to your Discord community.",
   "main": "app.js",
   "scripts": {
@@ -30,7 +30,8 @@
     "discord.js",
     "slash-commands"
   ],
-  "author": "Norbert Baricz",
+  "author": "MaxUltimat3",
+  "company": "Skypixel",
   "license": "ISC",
   "engines": {
     "node": ">=16.9.0"
