--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "dev:debug": "nodemon --inspect --verbose --watch . --ignore database.json --ignore '*.log' --trace-warnings app.js",
     "lint": "eslint . --ext .js --fix",
     "lint:check": "eslint . --ext .js",
-    "test": "jest --coverage",
+    "test": "jest --coverage --passWithNoTests",
     "test:watch": "jest --watch",
     "validate": "npm run lint:check && npm test"
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
-    "axios": "^1.9.0",
-    "discord.js": "^14.19.3",
-    "dotenv": "^16.5.0",
-    "js-yaml": "^4.1.0"
+    "axios": "^1.13.2",
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3",
+    "js-yaml": "^4.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.10"
+    "eslint": "^9.39.2",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.11"
   },
   "keywords": [
     "discord",
