--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
+    "@vladfrangu/async_event_emitter": "2.4.8-1.0",
     "axios": "^1.13.2",
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.7",
     "js-yaml": "^4.1.1"
   },
   "devDependencies": {
